--- a/src/index.html
+++ b/src/index.html
@@ -6,13 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="assets/css/font-awesome.min.css"> -->
   <link rel='stylesheet' href='assets/css/overlay-scrollbars.min.css'>
   <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> -->
   <!-- Bulma Version 0.9.0-->
-  <link rel="stylesheet" href="assets/css/bulma.min.css" />
+  <!-- <link rel="stylesheet" href="assets/css/bulma.min.css" /> -->
   <!-- <link rel="stylesheet" type="text/css" href="../css/hero.css"> -->
   <link rel="stylesheet" href="assets/css/modal-fx.min.css" />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 </head>
